--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     <div class="section">
         <div class="section-title">Professional Summary</div>
         <div class="summary">
-            United States Marine Corps veteran with over 5 years of specialized experience in electrical wiring, assembly, diagnostics, and mechanical repairs. Demonstrated expertise in fabricating and installing wiring harnesses, performing continuity checks, troubleshooting complex electrical systems, and soldering operations for component extensions and repairs. Proven ability to interpret blueprints, execute digital work instructions, and maintain rigorous safety and quality standards in fast-paced technical environments. Seeking to contribute technical excellence and military discipline to aerospace manufacturing operations at Lockheed Martin.
+            United States Marine Corps veteran with over 5 years of specialized experience in electrical wiring, assembly, diagnostics, and mechanical repairs. Demonstrated expertise in fabricating and installing wiring harnesses, troubleshooting complex electrical systems, and soldering operations. Proven ability to interpret blueprints and maintain rigorous safety and quality standards. Seeking to contribute technical excellence and military discipline to aerospace manufacturing operations at Lockheed Martin.
         </div>
     </div>
 
@@ -233,11 +233,9 @@
         <div class="section-title">Core Competencies</div>
         <div class="skills-grid">
             <div class="skill-item">Electrical Wiring & Harness Fabrication</div>
-            <div class="skill-item">Precision Soldering & Wire Termination</div>
             <div class="skill-item">Continuity Testing & Troubleshooting</div>
-            <div class="skill-item">Blueprint Reading & Technical Documentation</div>
             <div class="skill-item">Wire Processing & Routing Systems</div>
-            <div class="skill-item">Specialized Tools & Fixture Operation</div>
+            <div class="skill-item">Blueprint Reading & Technical Documentation</div>
             <div class="skill-item">Electrical Diagnosis & System Repair</div>
             <div class="skill-item">Mechanical Assembly & Bench Work</div>
             <div class="skill-item">Quality Control & Safety Compliance</div>
@@ -260,8 +258,8 @@
             <div class="job-description">
                 <ul>
                     <li>Built and maintained 7 kW mining infrastructure, managing FPGAs, GPUs, and IoT devices with 96%+ uptime through systematic diagnostics and preventive maintenance</li>
-                    <li>Executed complex cabling and wiring installations for network switches and power distribution systems, troubleshooting electrical faults to minimize operational downtime</li>
-                    <li>Performed precision wire soldering for custom component extensions, ensuring secure connections and system reliability in high-current applications</li>
+                    <li>Executed complex cabling and wiring installations for network switches and power distribution systems</li>
+                    <li>Performed wire soldering for custom component extensions, ensuring secure connections and system reliability in high-current applications</li>
                 </ul>
             </div>
         </div>
@@ -277,7 +275,7 @@
             </div>
             <div class="job-description">
                 <ul>
-                    <li>Maintained operational excellence in department management, inventory preparation, and quality assurance protocols</li>
+                    <li>Maintained department organization, assisted with inventory preparation, and ensured product quality standards</li>
                     <li>Contributed to facility remodeling projects involving assembly and installation tasks, demonstrating versatility and team collaboration</li>
                 </ul>
             </div>
@@ -371,12 +369,6 @@
             <div class="school">Universal Technical Institute, Inc. - Orlando, FL</div>
             <div class="education-date">Graduated: April 2018 (Ford FACT Graduate Program)</div>
             <div class="education-details">450 classroom hours + 2,033 web-based hours: Electrical Fundamentals & Diagnosis, Electronics, Powertrains, HVAC Systems, Hydraulics, and Preventative Maintenance</div>
-        </div>
-        
-        <div class="education-item">
-            <div class="degree">Digital Film & Television Production</div>
-            <div class="school">Art Institute of Atlanta - Atlanta, GA</div>
-            <div class="education-date">2007 – 2008</div>
         </div>
         
         <div class="education-item">
