--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             </div>
             <div class="job-description">
                 <ul>
-                    <li>Built and maintained 7 kW mining infrastructure, managing FPGAs, GPUs, and IoT devices with 96%+ uptime through systematic diagnostics and preventive maintenance</li>
+                    <li>Built and maintained 7 kW mining infrastructure, managing FPGAs, GPUs, and IoT devices with 96%+ uptime through systematic diagnostics and preventive maintenance with a pivit to AI</li>
                     <li>Executed complex cabling and wiring installations for network switches and power distribution systems</li>
                     <li>Performed wire soldering for custom component extensions, ensuring secure connections and system reliability in high-current applications</li>
                 </ul>
